# Fire-Bit

./: CMakeLists.txt  library.h  main.cpp
lib/include/: SDL_config.h
